--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,8 +7,9 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
+  margin: 0;
  }
 
  .container-fluid {
@@ -19,12 +20,13 @@
   padding-left: 0px;
   padding-right: 0px;
   height: 100%;
+  width: 100%;
  }
 
  form {
   position: absolute;
   z-index: 3;
-  right: 0;
+  margin: 0;
   margin-bottom: 15vw;
  }
 
@@ -34,7 +36,7 @@
 
  footer {
   position: absolute;
-  width: 100%;
+  width: auto;
   bottom: 0;
  }
 
@@ -59,7 +61,7 @@
 
  #navbar {
   background-color: #E8E8E8;
-  width: 100%;
+  width: 100vw;
   margin: 0px;
   z-index: 4;
  }
@@ -151,6 +153,13 @@
 
 
  /* --------------------------------------------------Media Queries------------------------------- */
+
+@media only screen and (max-width: 360px) {
+ .navbar-toggle {
+  margin-right: 5px;
+ }
+}
+
 
 @media only screen and (max-width: 767px) {
  .navbar-middle, .navbar-right {
